--- a/Discord-Bot.Core/packages.config
+++ b/Discord-Bot.Core/packages.config
@@ -7,6 +7,7 @@
   <package id="Discord.Net.Rpc" version="1.0.2" targetFramework="net461" />
   <package id="Discord.Net.Webhook" version="1.0.2" targetFramework="net461" />
   <package id="Discord.Net.WebSocket" version="1.0.2" targetFramework="net461" />
+  <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
@@ -57,6 +58,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
 </packages>
