Fixes/cleanup after previous conversion.

--- a/Sakura-Bot.Console/App.config
+++ b/Sakura-Bot.Console/App.config
@@ -4,15 +4,11 @@
       <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <appSettings>
-    <add key="Token" value="NDUzMDIzNjA0NDY0OTQzMTA0.Dp2RCA.wIulEzaBcKvCuYOBxV-mmT3i10o" /><!--Sakura-->
-    <!--<add key="Token" value="NDQwMTcxODI1OTk0MDA2NTI4.Dcd1ew.ms-m7IgHxxAsNsIFRgFd6mAkN4I" />--><!--Test-Bot-->
+    <add key="Token" value="" /><!--Sakura-->
+    <!--<add key="Token" value="" />--><!--Test-Bot-->
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Interactive.Async" publicKeyToken="94bc3704cddfc263" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
-      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
