--- a/Bott-Steeltoes.Console/App.config
+++ b/Bott-Steeltoes.Console/App.config
@@ -4,14 +4,10 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <appSettings>
-      <add key="Token" value="NTM5OTU4NjEzNzYyODk5OTgw.DzJ7fA.HRW0ZeFbbKnGf7GqQCCCpeWEhAU" />
+      <add key="Token" value="" />
     </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Interactive.Async" publicKeyToken="94bc3704cddfc263" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
-      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
