--- a/Bott-Steeltoes.Console/Bott-Steeltoes.Console.csproj
+++ b/Bott-Steeltoes.Console/Bott-Steeltoes.Console.csproj
@@ -12,9 +12,7 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Discord.Net">
-      <Version>2.1.1</Version>
-    </PackageReference>
+    <PackageReference Include="Discord.Net" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
       <Version>3.1.1</Version>
     </PackageReference>
@@ -69,9 +67,7 @@
     <PackageReference Include="System.Globalization.Calendars">
       <Version>4.3.0</Version>
     </PackageReference>
-    <PackageReference Include="System.Interactive.Async">
-      <Version>4.0.0</Version>
-    </PackageReference>
+    <PackageReference Include="System.Interactive.Async" Version="3.2.0" />
     <PackageReference Include="System.IO.Compression">
       <Version>4.3.0</Version>
     </PackageReference>
