--- a/Discord-Bot.Core/Discord-Bot.Core.csproj
+++ b/Discord-Bot.Core/Discord-Bot.Core.csproj
@@ -12,9 +12,7 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Discord.Net">
-      <Version>2.1.1</Version>
-    </PackageReference>
+    <PackageReference Include="Discord.Net" Version="2.1.1" />
     <PackageReference Include="JetBrains.Annotations">
       <Version>2019.1.3</Version>
     </PackageReference>
@@ -72,9 +70,7 @@
     <PackageReference Include="System.Globalization.Calendars">
       <Version>4.3.0</Version>
     </PackageReference>
-    <PackageReference Include="System.Interactive.Async">
-      <Version>4.0.0</Version>
-    </PackageReference>
+    <PackageReference Include="System.Interactive.Async" Version="3.2.0" />
     <PackageReference Include="System.IO.Compression">
       <Version>4.3.0</Version>
     </PackageReference>
