--- a/Sakura-Bot.Console/Sakura-Bot.Console.csproj
+++ b/Sakura-Bot.Console/Sakura-Bot.Console.csproj
@@ -13,9 +13,7 @@
     <ProjectReference Include="..\Discord-Bot.Core\Discord-Bot.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Discord.Net">
-      <Version>2.1.1</Version>
-    </PackageReference>
+    <PackageReference Include="Discord.Net" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
       <Version>3.1.1</Version>
     </PackageReference>
@@ -70,9 +68,7 @@
     <PackageReference Include="System.Globalization.Calendars">
       <Version>4.3.0</Version>
     </PackageReference>
-    <PackageReference Include="System.Interactive.Async">
-      <Version>4.0.0</Version>
-    </PackageReference>
+    <PackageReference Include="System.Interactive.Async" Version="3.2.0" />
     <PackageReference Include="System.IO.Compression">
       <Version>4.3.0</Version>
     </PackageReference>
