--- a/Smarsh-Bot.Console/Smarsh-Bot.Console.csproj
+++ b/Smarsh-Bot.Console/Smarsh-Bot.Console.csproj
@@ -13,9 +13,11 @@
     <ProjectReference Include="..\Discord-Bot.Core\Discord-Bot.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="2.1.1" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces">
       <Version>1.1.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Interactive.Async" Version="3.2.0" />
     <PackageReference Include="System.Linq.Async">
       <Version>4.0.0</Version>
     </PackageReference>
