--- a/Sakura-Bot.Console/Sakura-Bot.Console.csproj
+++ b/Sakura-Bot.Console/Sakura-Bot.Console.csproj
@@ -1,18 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk;Microsoft.NET.Sdk.Publish">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Sakura_Bot.Console</RootNamespace>
     <UserSecretsId>d83a6224-1ecb-41ca-b84a-b850884c0f0b</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Discord-Bot.Core\Discord-Bot.Core.csproj" />
   </ItemGroup>
-
 </Project>
